Added EDA ipynb and template

--- a/jeff.ipynb
+++ b/jeff.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f0445526",
+   "metadata": {},
+   "source": [
+    "# 2025 COMP90042 Project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64d93c1e",
+   "metadata": {},
+   "source": [
+    "# 1.Dataset Processing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b37da0d",
+   "metadata": {},
+   "source": [
+    "# 2. Model Implementation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "fc1e13e2",
@@ -6102,101 +6126,6 @@
     "\n",
     "res = process_claims(llama_filter,res)\n",
     "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af32f19b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class HybridRetriever:\n",
-    "    def __init__(self, retriever: EvidenceClaimRetriever, llama_filter: LLaMAFilter):\n",
-    "        self.retriever = retriever\n",
-    "        self.filter = llama_filter\n",
-    "\n",
-    "    def load_data(self, claims_path, evidence_path):\n",
-    "        \"\"\"Load data for retriever\"\"\"\n",
-    "        self.retriever.load_data(claims_path, evidence_path)\n",
-    "\n",
-    "    def load_dev_data(self, dev_claims_path):\n",
-    "        \"\"\"Load dev data for retriever\"\"\"\n",
-    "        self.retriever.load_dev_data(dev_claims_path)\n",
-    "\n",
-    "    # def train(self, output_dir='./trained_model'):\n",
-    "    #     \"\"\"Train the retriever\"\"\"\n",
-    "    #     self.retriever.train(output_dir)\n",
-    "\n",
-    "    def index_evidence(self, save_path='data/evidence_embeddings.pth'):\n",
-    "        \"\"\"Index evidence for retriever\"\"\"\n",
-    "        self.retriever.index_evidence(save_path)\n",
-    "    def get_evidence_text(self, evidences):\n",
-    "        eids = [eid for eid, _ in evidences]\n",
-    "        return [(eid, self.retriever.evidence_map[eid]) for eid in eids]\n",
-    "    def retrieve_and_filter(self, claim_text, top_k_initial=10, top_k_final=5):\n",
-    "        \"\"\"Retrieve top 10 with sentence-transformers, filter to top 5 with LLaMA\"\"\"\n",
-    "        initial_results = self.retriever.retrieve(claim_text, top_k=top_k_initial)\n",
-    "        final_results = self.filter.filter_evidence(claim_text, get_evidence_text(initial_results), final_k=top_k_final)\n",
-    "        return final_results\n",
-    "\n",
-    "    def evaluate(self, claims_path, top_k_initial=10, top_k_final=5):\n",
-    "        \"\"\"Evaluate the hybrid system\"\"\"\n",
-    "        with open(claims_path) as f:\n",
-    "            claims = json.load(f)\n",
-    "\n",
-    "        recall_initial = 0\n",
-    "        recall_final = 0\n",
-    "        precision_final = 0\n",
-    "        mrr_final = 0\n",
-    "        runtimes = []\n",
-    "        memory_usages = []\n",
-    "\n",
-    "        import time\n",
-    "        import psutil\n",
-    "        process = psutil.Process(os.getpid())\n",
-    "\n",
-    "        for claim_id, claim_data in claims.items():\n",
-    "            claim_text = claim_data['claim_text']\n",
-    "            relevant = set(claim_data['evidences'])\n",
-    "\n",
-    "            # Measure runtime and memory\n",
-    "            start_time = time.time()\n",
-    "            results = self.retrieve_and_filter(claim_text, top_k_initial, top_k_final)\n",
-    "            runtime = time.time() - start_time\n",
-    "            runtimes.append(runtime)\n",
-    "            memory_usages.append(process.memory_info().rss / 1024**2)  # MB\n",
-    "\n",
-    "            # Get retrieved evidence IDs\n",
-    "            retrieved_final = {eid for eid, _, _ in results}\n",
-    "            retrieved_initial = {eid for eid, _ in self.retriever.retrieve(claim_text, top_k_initial)}\n",
-    "\n",
-    "            # Recall for initial retriever\n",
-    "            recall_initial += len(relevant & retrieved_initial) / len(relevant) if relevant else 0\n",
-    "\n",
-    "            # Recall for final hybrid\n",
-    "            recall_final += len(relevant & retrieved_final) / len(relevant) if relevant else 0\n",
-    "\n",
-    "            # Precision for final hybrid\n",
-    "            precision_final += len(relevant & retrieved_final) / top_k_final if relevant else 0\n",
-    "\n",
-    "            # MRR for final hybrid\n",
-    "            for rank, (eid, _, _) in enumerate(results, 1):\n",
-    "                if eid in relevant:\n",
-    "                    mrr_final += 1 / rank\n",
-    "                    break\n",
-    "            else:\n",
-    "                mrr_final += 0\n",
-    "\n",
-    "        n = len(claims)\n",
-    "        return {\n",
-    "            \"Recall@10 (Initial)\": recall_initial / n,\n",
-    "            \"Recall@5 (Final)\": recall_final / n,\n",
-    "            \"Precision@5 (Final)\": precision_final / n,\n",
-    "            \"MRR@5 (Final)\": mrr_final / n,\n",
-    "            \"Avg Runtime (s)\": sum(runtimes) / n,\n",
-    "            \"Avg Memory (MB)\": sum(memory_usages) / n\n",
-    "        }"
    ]
   }
  ],
